# miniCRT

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  minicrt_alloc.c  minicrt_errno.c  minicrt_fltused.c  minicrt_math_support.c  minicrt_math_wrappers.c  minicrt_mem.c  minicrt_new.cpp  minicrt_printf.c  minicrt_string.c  test_main.c
